# TriggerAutoInput

./: .gitignore  README.md  auto_input_manager.py  main.py  mainWindow.py  pyproject.toml
.github/workflows/: release.yml
config/: example.json
scripts/: build_release.ps1
