[project]
name = "triggerautoinput"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydirectinput>=1.0.4",
    "pynput>=1.8.1",
    "psutil>=5.9.0",
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple"